Corrective Smooth Modifier binding process is broken #60060

Closed
opened 2019-01-02 10:34:53 +01:00 by Valleron Nicolas · 3 comments

System Information
Operating system: Windows 10
Graphics card: GTX-970

Blender Version
Broken: blender-2.80-d96596de294e-win64
Worked: (optional)

Short description of error
The corrective smooth modifier doen't work properly
Exact steps for others to reproduce the error
When I press on the Bind Button, there's no informations to understand I something was done (in 2.79 there was a Bind/Unbind toggle for example) . When I playback a simple animation, it seems to work, but doesn't work any-more If I close/reopen the file or if I jump to a certain keyframe. Moreover if I switch off/on the modifier, everything is loss.
Based on the default startup or an attached .blend file (as simple as possible).
Alex2.blend

**System Information** Operating system: Windows 10 Graphics card: GTX-970 **Blender Version** Broken: blender-2.80-d96596de294e-win64 Worked: (optional) **Short description of error** The corrective smooth modifier doen't work properly **Exact steps for others to reproduce the error** When I press on the Bind Button, there's no informations to understand I something was done (in 2.79 there was a Bind/Unbind toggle for example) . When I playback a simple animation, it seems to work, but doesn't work any-more If I close/reopen the file or if I jump to a certain keyframe. Moreover if I switch off/on the modifier, everything is loss. Based on the default startup or an attached .blend file (as simple as possible). [Alex2.blend](https://archive.blender.org/developer/F6148471/Alex2.blend)

Added subscriber: @nicolas.valleron

Added subscriber: @nicolas.valleron
Bastien Montagne self-assigned this 2019-01-02 11:18:52 +01:00
Bastien Montagne changed title from Corrective Smooth Modifier to Corrective Smooth Modifier binding process is broken 2019-01-02 11:25:11 +01:00

This issue was referenced by f15205b93f

This issue was referenced by f15205b93f56e454b76d5a222fdb9a9665b99907

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60060
No description provided.