Fix T60060: Corrective Smooth Modifier binding process is broken.

Same as with the other modifiers' binding ops, those need to be
performed outside of regular depsgraph eval.